# taskhunt-api

./: .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
app/: __init__.py  config.py  main.py
app/models/: __init__.py  task.py
app/routers/: __init__.py  stats.py  tasks.py
app/services/: __init__.py  cache.py  pr_fetcher.py  task_fetcher.py  task_parser.py
